# MonkeyTyper

./: .gitignore.txt  CMakeLists.txt  README.md  main.cpp
Assets/: config.txt
src/: AlignCenter.cpp  AlignCenter.hpp  Config.cpp  Config.hpp  Main.hpp  Words.cpp  Words.hpp
